Адаптивность основного сайта

--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
 				<div class="container">
 					<h2 class="section-title section-title--white">Популярные курсы</h2>
 					<div class="box box-row box-row--thin box-wrap">
-						<div class="column column-xs-full column-third column--thin box">
+						<div class="column column-sm-full column-third column--thin box">
 							<div class="card">
 								<div class="card-photo">
 									<a href="#">
@@ -144,7 +144,7 @@
 							</div>
 						</div>
 
-						<div class="column column-xs-full column-third column--thin box">
+						<div class="column column-sm-full column-third column--thin box">
 							<div class="card">
 								<div class="card-photo">
 									<a href="#">
@@ -168,7 +168,7 @@
 							</div>
 						</div>
 
-						<div class="column column-xs-full column-third column--thin box">
+						<div class="column column-sm-full column-third column--thin box">
 							<div class="card">
 								<div class="card-photo">
 									<a href="#">
@@ -248,7 +248,7 @@
 
                         <div class="tabs-content active">
 							<div class="box box-row box-row--wide box-wrap">
-								<div class="column column-xs-full column--wide column-third">
+								<div class="column column-sm-full column--wide column-third">
 									<div class="card card-wrapper">
 										<div class="card-head">
 											<h3 class="card-title card-title--medium card-title--blue">
@@ -269,7 +269,7 @@
 									</div>
 								</div>
 
-								<div class="column column-xs-full column--wide column-third">
+								<div class="column column-sm-full column--wide column-third">
 									<div class="card card-wrapper">
 										<div class="card-head">
 											<h3 class="card-title card-title--medium card-title--blue">
@@ -290,74 +290,7 @@
 									</div>
 								</div>
 
-								<div class="column column-xs-full column--wide column-third">
-									<div class="card card-wrapper">
-										<div class="card-head">
-											<h3 class="card-title card-title--medium card-title--blue">
-												<a href="section partners">Веб-дизайнер</a>
-											</h3>
-										</div>
-										<div class="card-body">
-											<div class="box box-between box-center--vertical">
-		                                        <p class="card-subtitle">Ростелеком</p>
-		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
-		                                    </div>
-											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
-										<div class="card-footer box box-between">
-											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
-											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
-										</div>
-									</div>
-								</div>
-							</div>
-                        </div>
-
-                        <div class="tabs-content">
-							<div class="box box-row box-row--wide box-wrap">
-								<div class="column column-xs-full column--wide column-third">
-									<div class="card card-wrapper">
-										<div class="card-head">
-											<h3 class="card-title card-title--medium card-title--blue">
-												<a href="section partners">Веб-дизайнер</a>
-											</h3>
-										</div>
-										<div class="card-body">
-											<div class="box box-between box-center--vertical">
-		                                        <p class="card-subtitle">Ростелеком</p>
-		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
-		                                    </div>
-											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
-										<div class="card-footer box box-between">
-											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
-											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
-										</div>
-									</div>
-								</div>
-
-								<div class="column column-xs-full column--wide column-third">
-									<div class="card card-wrapper">
-										<div class="card-head">
-											<h3 class="card-title card-title--medium card-title--blue">
-												<a href="section partners">Веб-дизайнер</a>
-											</h3>
-										</div>
-										<div class="card-body">
-											<div class="box box-between box-center--vertical">
-		                                        <p class="card-subtitle">Ростелеком</p>
-		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
-		                                    </div>
-											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
-										<div class="card-footer box box-between">
-											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
-											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
-										</div>
-									</div>
-								</div>
-
-								<div class="column column-xs-full column--wide column-third">
+								<div class="column column-sm-full column--wide column-third">
 									<div class="card card-wrapper">
 										<div class="card-head">
 											<h3 class="card-title card-title--medium card-title--blue">
@@ -382,7 +315,7 @@
 
                         <div class="tabs-content">
 							<div class="box box-row box-row--wide box-wrap">
-								<div class="column column-xs-full column--wide column-third">
+								<div class="column column-sm-full column--wide column-third">
 									<div class="card card-wrapper">
 										<div class="card-head">
 											<h3 class="card-title card-title--medium card-title--blue">
@@ -403,7 +336,7 @@
 									</div>
 								</div>
 
-								<div class="column column-xs-full column--wide column-third">
+								<div class="column column-sm-full column--wide column-third">
 									<div class="card card-wrapper">
 										<div class="card-head">
 											<h3 class="card-title card-title--medium card-title--blue">
@@ -424,74 +357,7 @@
 									</div>
 								</div>
 
-								<div class="column column-xs-full column--wide column-third">
-									<div class="card card-wrapper">
-										<div class="card-head">
-											<h3 class="card-title card-title--medium card-title--blue">
-												<a href="section partners">Веб-дизайнер</a>
-											</h3>
-										</div>
-										<div class="card-body">
-											<div class="box box-between box-center--vertical">
-		                                        <p class="card-subtitle">Ростелеком</p>
-		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
-		                                    </div>
-											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
-										<div class="card-footer box box-between">
-											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
-											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
-										</div>
-									</div>
-								</div>
-							</div>
-                        </div>
-
-                        <div class="tabs-content">
-							<div class="box box-row box-row--wide box-wrap">
-								<div class="column column-xs-full column--wide column-third">
-									<div class="card card-wrapper">
-										<div class="card-head">
-											<h3 class="card-title card-title--medium card-title--blue">
-												<a href="section partners">Веб-дизайнер</a>
-											</h3>
-										</div>
-										<div class="card-body">
-											<div class="box box-between box-center--vertical">
-		                                        <p class="card-subtitle">Ростелеком</p>
-		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
-		                                    </div>
-											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
-										<div class="card-footer box box-between">
-											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
-											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
-										</div>
-									</div>
-								</div>
-
-								<div class="column column-xs-full column--wide column-third">
-									<div class="card card-wrapper">
-										<div class="card-head">
-											<h3 class="card-title card-title--medium card-title--blue">
-												<a href="section partners">Веб-дизайнер</a>
-											</h3>
-										</div>
-										<div class="card-body">
-											<div class="box box-between box-center--vertical">
-		                                        <p class="card-subtitle">Ростелеком</p>
-		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
-		                                    </div>
-											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
-										<div class="card-footer box box-between">
-											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
-											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
-										</div>
-									</div>
-								</div>
-
-								<div class="column column-xs-full column--wide column-third">
+								<div class="column column-sm-full column--wide column-third">
 									<div class="card card-wrapper">
 										<div class="card-head">
 											<h3 class="card-title card-title--medium card-title--blue">
@@ -516,7 +382,7 @@
 
                         <div class="tabs-content">
 							<div class="box box-row box-row--wide box-wrap">
-								<div class="column column-xs-full column--wide column-third">
+								<div class="column column-sm-full column--wide column-third">
 									<div class="card card-wrapper">
 										<div class="card-head">
 											<h3 class="card-title card-title--medium card-title--blue">
@@ -537,7 +403,7 @@
 									</div>
 								</div>
 
-								<div class="column column-xs-full column--wide column-third">
+								<div class="column column-sm-full column--wide column-third">
 									<div class="card card-wrapper">
 										<div class="card-head">
 											<h3 class="card-title card-title--medium card-title--blue">
@@ -558,7 +424,141 @@
 									</div>
 								</div>
 
-								<div class="column column-xs-full column--wide column-third">
+								<div class="column column-sm-full column--wide column-third">
+									<div class="card card-wrapper">
+										<div class="card-head">
+											<h3 class="card-title card-title--medium card-title--blue">
+												<a href="section partners">Веб-дизайнер</a>
+											</h3>
+										</div>
+										<div class="card-body">
+											<div class="box box-between box-center--vertical">
+		                                        <p class="card-subtitle">Ростелеком</p>
+		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
+		                                    </div>
+											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+										</div>
+										<div class="card-footer box box-between">
+											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
+											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
+										</div>
+									</div>
+								</div>
+							</div>
+                        </div>
+
+                        <div class="tabs-content">
+							<div class="box box-row box-row--wide box-wrap">
+								<div class="column column-sm-full column--wide column-third">
+									<div class="card card-wrapper">
+										<div class="card-head">
+											<h3 class="card-title card-title--medium card-title--blue">
+												<a href="section partners">Веб-дизайнер</a>
+											</h3>
+										</div>
+										<div class="card-body">
+											<div class="box box-between box-center--vertical">
+		                                        <p class="card-subtitle">Ростелеком</p>
+		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
+		                                    </div>
+											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+										</div>
+										<div class="card-footer box box-between">
+											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
+											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
+										</div>
+									</div>
+								</div>
+
+								<div class="column column-sm-full column--wide column-third">
+									<div class="card card-wrapper">
+										<div class="card-head">
+											<h3 class="card-title card-title--medium card-title--blue">
+												<a href="section partners">Веб-дизайнер</a>
+											</h3>
+										</div>
+										<div class="card-body">
+											<div class="box box-between box-center--vertical">
+		                                        <p class="card-subtitle">Ростелеком</p>
+		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
+		                                    </div>
+											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+										</div>
+										<div class="card-footer box box-between">
+											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
+											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
+										</div>
+									</div>
+								</div>
+
+								<div class="column column-sm-full column--wide column-third">
+									<div class="card card-wrapper">
+										<div class="card-head">
+											<h3 class="card-title card-title--medium card-title--blue">
+												<a href="section partners">Веб-дизайнер</a>
+											</h3>
+										</div>
+										<div class="card-body">
+											<div class="box box-between box-center--vertical">
+		                                        <p class="card-subtitle">Ростелеком</p>
+		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
+		                                    </div>
+											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+										</div>
+										<div class="card-footer box box-between">
+											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
+											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
+										</div>
+									</div>
+								</div>
+							</div>
+                        </div>
+
+                        <div class="tabs-content">
+							<div class="box box-row box-row--wide box-wrap">
+								<div class="column column-sm-full column--wide column-third">
+									<div class="card card-wrapper">
+										<div class="card-head">
+											<h3 class="card-title card-title--medium card-title--blue">
+												<a href="section partners">Веб-дизайнер</a>
+											</h3>
+										</div>
+										<div class="card-body">
+											<div class="box box-between box-center--vertical">
+		                                        <p class="card-subtitle">Ростелеком</p>
+		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
+		                                    </div>
+											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+										</div>
+										<div class="card-footer box box-between">
+											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
+											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
+										</div>
+									</div>
+								</div>
+
+								<div class="column column-sm-full column--wide column-third">
+									<div class="card card-wrapper">
+										<div class="card-head">
+											<h3 class="card-title card-title--medium card-title--blue">
+												<a href="section partners">Веб-дизайнер</a>
+											</h3>
+										</div>
+										<div class="card-body">
+											<div class="box box-between box-center--vertical">
+		                                        <p class="card-subtitle">Ростелеком</p>
+		                                        <p class="card-small-text card-dark-gray-text">Москва</p>
+		                                    </div>
+											<p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+										</div>
+										<div class="card-footer box box-between">
+											<p class="card-medium-text card-dark-gray-text">16 марта 2019</p>
+											<p class="card-large-text card-title--bold card-title--blue">50 000 руб</p>
+										</div>
+									</div>
+								</div>
+
+								<div class="column column-sm-full column--wide column-third">
 									<div class="card card-wrapper">
 										<div class="card-head">
 											<h3 class="card-title card-title--medium card-title--blue">
@@ -609,7 +609,7 @@
         	<div class="container">
         		<h2 class="section-title section-title--blue">Отзывы наших студентов</h2>
         		<div class="box box-wrap box-row box-center">
-        			<div class="column column-xs-full column-eight">
+        			<div class="column column-sm-full column-eight">
 		        		<div class="slider slider-two-columns">
 		        			<div class="slider-two-columns-item">
 								<div class="slider-two-columns-photo">
