--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -20,6 +20,7 @@
                             </ul>
                         </nav>
                         <div class="search">
+                            <span class="search-toggle"></span>
                             <form role="search" method="get" action="#" class="search-form">
                                 <input class="search-field" type="search" name="s" placeholder="Поиск вакансий, курсов и стажировок">
                                 <button class="search-btn" type="submit">Найти</button>
@@ -35,6 +36,24 @@
                                 </li>
                             </ul>
                         </div>
+
+                        <div class="mobile-menu">
+                            <span id="toggle-menu" class="toggle-menu"></span>
+                            <ul class="mobile-menu-list">
+                                <li class="mobile-menu-item">
+                                    <a href="vacancy.html" class="mobile-menu-link">Вакансии</a>
+                                </li>
+                                <li class="mobile-menu-item">
+                                    <a href="#" class="mobile-menu-link">Контакты</a>
+                                </li>
+                                <li class="mobile-menu-item mobile-menu-item--divider">
+                                    <a href="#loginForm" class="mobile-menu-link btn-modal">Войти</a>
+                                </li>
+                                <li class="mobile-menu-item">
+                                    <a href="#registrationForm" class="mobile-menu-link btn-modal">Регистрация</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -43,7 +62,7 @@
                 <div class="container">
                     <h1 class="title">Вакансии по запросу «Веб-дизайнер»</h1>
                     <div class="filter-box">
-                        <form action="#" class="filter-form box">
+                        <form action="#" class="filter-form box box-wrap">
                             <div class="group filter-group">
                                 <select name="sources" id="sources" class="custom-select sources" placeholder="Регион">
                                     <option value="Москва">Москва</option>
@@ -100,7 +119,7 @@
                     </div>
 
                     <div class="box box-row box-wrap box-row--wide">
-                        <div class="column column--wide column-third">
+                        <div class="column column--wide column-sm-full column-third">
                             <div class="card card-wrapper">
                                 <div class="card-head box box-between">
                                     <h3 class="card-title card-title--medium card-title--blue">
@@ -125,7 +144,7 @@
                             </div>
                         </div>
 
-                        <div class="column column--wide column-third">
+                        <div class="column column--wide column-sm-full column-third">
                             <div class="card card-wrapper">
                                 <div class="card-head box box-between">
                                     <h3 class="card-title card-title--medium card-title--blue">
@@ -150,7 +169,7 @@
                             </div>
                         </div>
 
-                        <div class="column column--wide column-third">
+                        <div class="column column--wide column-sm-full column-third">
                             <div class="card card-wrapper">
                                 <div class="card-head box box-between">
                                     <h3 class="card-title card-title--medium card-title--blue">
@@ -175,7 +194,7 @@
                             </div>
                         </div>
 
-                        <div class="column column--wide column-third">
+                        <div class="column column--wide column-sm-full column-third">
                             <div class="card card-wrapper">
                                 <div class="card-head box box-between">
                                     <h3 class="card-title card-title--medium card-title--blue">
@@ -200,7 +219,7 @@
                             </div>
                         </div>
 
-                        <div class="column column--wide column-third">
+                        <div class="column column--wide column-sm-full column-third">
                             <div class="card card-wrapper">
                                 <div class="card-head box box-between">
                                     <h3 class="card-title card-title--medium card-title--blue">
@@ -225,7 +244,7 @@
                             </div>
                         </div>
 
-                        <div class="column column--wide column-third">
+                        <div class="column column--wide column-sm-full column-third">
                             <div class="card card-wrapper">
                                 <div class="card-head box box-between">
                                     <h3 class="card-title card-title--medium card-title--blue">
@@ -250,7 +269,7 @@
                             </div>
                         </div>
 
-                        <div class="column column--wide column-third">
+                        <div class="column column--wide column-sm-full column-third">
                             <div class="card card-wrapper">
                                 <div class="card-head box box-between">
                                     <h3 class="card-title card-title--medium card-title--blue">
@@ -275,7 +294,7 @@
                             </div>
                         </div>
 
-                        <div class="column column--wide column-third">
+                        <div class="column column--wide column-sm-full column-third">
                             <div class="card card-wrapper">
                                 <div class="card-head box box-between">
                                     <h3 class="card-title card-title--medium card-title--blue">
